[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/Swatches.png" type="Texture" id=1]
[ext_resource path="res://World/Scoreboard.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[node name="Scoreboard" type="MarginContainer"]
pause_mode = 2
margin_right = 320.0
margin_bottom = 320.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 5
texture = SubResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 116.0
margin_top = 128.0
margin_right = 204.0
margin_bottom = 192.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 88.0
margin_bottom = 14.0
text = "SCOREBOARD"
align = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_left = 44.0
margin_top = 64.0
margin_right = 44.0
margin_bottom = 64.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/vseparation = 30
custom_constants/hseparation = 30
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
visible = false
margin_right = 126.0
margin_bottom = 14.0
text = "SCIENCE TIME: "

[node name="ScienceTime" type="Label" parent="VBoxContainer/GridContainer"]
visible = false
margin_bottom = 14.0

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
visible = false
margin_right = 126.0
margin_bottom = 14.0
text = "SCIENCE MISTAKES: "

[node name="Mistakes" type="Label" parent="VBoxContainer/GridContainer"]
visible = false
margin_bottom = 14.0

[node name="Label5" type="Label" parent="VBoxContainer/GridContainer"]
visible = false
margin_right = 106.0
margin_bottom = 14.0
text = "PLAY TIME: "

[node name="PlayTime" type="Label" parent="VBoxContainer/GridContainer"]
visible = false
margin_bottom = 14.0

[node name="Label7" type="Label" parent="VBoxContainer/GridContainer"]
visible = false
margin_right = 106.0
margin_bottom = 14.0
text = "OVERALL SCORE:"

[node name="OverallScore" type="Label" parent="VBoxContainer/GridContainer"]
visible = false
margin_bottom = 14.0

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
